2014-09-13  Babak Shafiei  <bshafiei@apple.com>

        Merge r173595

    2014-09-12  Tim Horton  <timothy_horton@apple.com>

            Swiping back from a Twitter image to Twitter flashes to the wrong position
            https://bugs.webkit.org/show_bug.cgi?id=136798
            <rdar://problem/18324338>

            Reviewed by Darin Adler and Sam Weinig.

            * wtf/RunLoop.h:
            (WTF::RunLoop::TimerBase::startRepeating):
            Add a std::chrono veresion of RunLoop::TimerBase::startRepeating.

2014-08-28  Roger Fong  <roger_fong@apple.com>

        Unreviewed build fix. Specify which version of cygwin python to use.

        * WTF.vcxproj/WTFGenerated.make:

2014-08-28  Lucas Forschler  <lforschler@apple.com>

        Merge r173036

    2014-08-27  Mark Rowe  <mrowe@apple.com>

            JavaScriptCore is missing debug info for WTF because libWTF.a is stripped.
            <https://webkit.org/b/136320> / <rdar://problem/18148776>

            Reviewed by Dan Bernstein.

            * Configurations/WTF.xcconfig: Set STRIP_INSTALLED_PRODUCT = NO for the target
            that produces libWTF.a so that the debug symbols will be linked into JavaScriptCore
            and end up in its dSYM file.

2014-08-15  Matthew Hanson  <matthew_hanson@apple.com>

        Merge r172019. <rdar://problem/18029617>

    2014-08-04  Matthew Hanson  <matthew_hanson@apple.com>
    
            [Win] Temporarily turn off WebGL.
            https://bugs.webkit.org/show_bug.cgi?id=135543
    
            Landed on behalf of Brent Fulgham.
    
            * wtf/FeatureDefines.h: Turn off WebGL feature.
    
2014-07-30  Lucas Forschler  <lforschler@apple.com>

        Merge r171825

    2014-07-29  Brent Fulgham  <bfulgham@apple.com>
    
            [Win] Modify version numbering scheme to support 5-tuple versions
            https://bugs.webkit.org/show_bug.cgi?id=135400
            <rdar://problem/17849033>
    
            Reviewed by David Kilzer.
    